--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
@@ -45,6 +47,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router": "^5.1.17",
+    "@types/react-router-dom": "^5.3.1",
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.36",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.14"
